Run service on background thread properly, refactoring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <service
             android:name=".NetSpeedIndicatorService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false"
+            android:process=":background" />
 
         <receiver
             android:name=".BootCompleteReceiver"
