--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.nisargjhaveri.netspeed"
         minSdkVersion 23
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
     }
@@ -17,6 +17,7 @@ android {
             minifyEnabled true
         }
         debug {
+            applicationIdSuffix ".debug"
         }
     }
 }
