Refactor, rename NetSpeedIndicatorService to IndicatorService

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
 
         <service
-            android:name=".NetSpeedIndicatorService"
+            android:name=".IndicatorService"
             android:enabled="true"
             android:exported="false"
             android:process=":background" />
