--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity
             android:name=".settings.SettingsActivity"
             android:exported="false"
+            android:launchMode="singleTop"
             android:label="@string/settings_activity_label">
             <intent-filter>
                 <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
