Menu in settings activity, with rate app option and about page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
         debug {
             applicationIdSuffix ".debug"
         }
+        all {
+            resValue 'string', 'version_name', defaultConfig.versionName
+        }
     }
 }
 
