--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".AboutActivity"
+            android:theme="@style/AppTheme"
+            android:label="@string/about"
+            android:parentActivityName=".settings.SettingsActivity">
+        </activity>
+
         <service
             android:name=".IndicatorService"
             android:enabled="true"
